fixing line issue and letter spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -173,6 +173,7 @@ p {
 	font-size: 14px;
 	color: #666;
 	font-weight: 300;
+	letter-spacing: .5px;
 }
 
 
